# llm-web

./: .gitignore  Cargo.toml  README.md  design.md  json.rs  lighttpd.config  test_one.txt
certs/: README.md
llm-rs/: Cargo.toml
llm-rs/src/: api_error.rs  api_result.rs  fine_tune_create.rs  fine_tune_list.rs  fine_tune_retrieve.rs  json.rs  openai_interface.rs
llm-web-be/: Cargo.toml
llm-web-be/certs/: README.md
llm-web-be/src/: authorisation.rs  data_store.rs  main.rs  server.rs  session.rs  websocket_server.rs
llm-web-common/: Cargo.toml
llm-web-common/src/: README.md  communication.rs  lib.rs
llm-web-fe/: Cargo.toml  README.md  build.rs  build.sh  index.html  issues.md  lighttpd.config  style.css
llm-web-fe/src/: app.css  cancel_button.rs  chat_div.rs  claims.rs  cost_div.rs  error_div.rs  filters.rs  interaction_div.rs  lib.rs  llm_webpage.rs  login_div.rs  make_request.rs  manipulate_css.rs  set_page.rs  tests.rs  utility.rs
src/: api_error.rs  api_result.rs  context.rs  fine_tune.rs  fine_tune_create.rs  fine_tune_info.rs  fine_tune_list.rs  fine_tune_retrieve.rs  json.rs  lib.rs  model_info.rs  model_mode.rs  openai_interface.rs  shared_state.rs
