[package]
name = "llm-rs"
version = "0.1.0"
edition = "2021"
authors = ["Worik Stanton root@worik.org"]
description = "A library, with a command line interface, to exploit Large Language Models"
repository = "https://github.com/worikgh/llm-rs/"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
rustyline = {version=">10.1.1", features=["custom-bindings", "derive"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
env_logger = { version = "0.10", default-features = false }
webbrowser = "0.5"
base64 = "0.13"
tempfile = "3.5.0"
curl = "0.4.44"
image = "0.24.6"
rand = "0.8.5"
directories = "5.0.1"


[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "llm_rs"
path = "src/lib.rs"
