[package]
name = "llm-web"
version = "0.1.0"
authors = ["Worik Stanton"]
description = "A web app front end for Large Language Models"
license = "GPL3"
edition = "2021"
repository = "https://github.com/worikgh/llm-web"

[workspace]
members = [
"llm-web-fe",
"llm-web-common",
"llm-web-be",
"llm-rs",
]

[[bin]]
name = "llm-openai-cli"
path = "llm-rs/src/bin/cli.rs"

