[package]
name = "llm-rs"
version = "0.1.1"
edition = "2021"
authors = ["Worik Stanton root@worik.org"]
description = "A library, with a command line interface, to exploit Large Language Models"
repository = "https://github.com/worikgh/llm/llm-rs/"
license = "GPL-3.0-only"

[dependencies]
base64 = "0.13"
chrono = "0.4.24"
clap = { version = "4.0.32", features = ["derive"] }
curl = "0.4.44"
directories = "5.0.1"
dotenv = "0.15.0"
env_logger = { version = "0.10", default-features = false }
fs2="0.4.3"
image = "0.24.6"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
rustyline = {version=">10.1.1", features=["custom-bindings", "derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5.0"
webbrowser = "0.5"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "llm_rs"
path = "src/lib.rs"
