[package]
name = "llm-web-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3"
hmac = "0.12.1"
sha2 = "0.10.7"
jwt = "0.16.0"

