[package]
name = "llm-web-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
hmac = "0.12.1"
sha2 = "0.10.7"
jwt = "0.16.0"
serde_json = "1.0"
rsa = {version = "0.9", features = ["serde"]}
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js", "wasm-bindgen"]} 
llm-rs = {path = "../../llm-rs"}

# [dependencies.uuid]
# version = "1.4.1"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]
