[package]
name = "llm-web-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
js-sys = "0.3"
jwt = "0.16.0"
rsa = {version = "0.9", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js", "wasm-bindgen"]} 
wasm-bindgen = "0.2"


