[package]
name = "llm-web-fe"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
gloo-events = "0.2"
gloo = {version="0.10.0", features=["events"]}
# gloo-storage = "0.2.2"
js-sys = "0.3"
llm-web-common = {path = "../llm-web-common"}
serde_json = "1.0"
wasm-bindgen-test = "0.3.15"

[dependencies.web-sys]
version = "0.3.4"
features = [
'CssRule',
'CssRuleList',
'CssStyleDeclaration',
'CssStyleRule',
'CssStyleSheet',
'Document',
'Element',
'HtmlButtonElement',
'HtmlElement',
'HtmlInputElement',
'HtmlLinkElement',
'HtmlOptionElement',
'HtmlOptionsCollection',
'HtmlSelectElement',
'HtmlStyleElement',
'Node',
'StyleSheet',
'StyleSheetList',
'Text', 
'Window',
'XmlHttpRequest',
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   'Document',
#   'Element',
#   'HtmlButtonElement',
#   'HtmlDivElement',
#   'HtmlElement',
#   'HtmlInputElement',
#   'HtmlLinkElement',
#   'HtmlSelectElement',
#   'HtmlStyleElement',
#   'HtmlOptionElement',
#   'HtmlOptionsCollection',
#   'HtmlTextAreaElement',
#   'MouseEvent',   
#   'Node',
#   'Request',
#   'RequestInit',
#   'RequestMode',
#   'Response',
#   'Text',
#   'Window',
#   'XmlHttpRequest',
#   'console',
# ]
