[package]
name = "llm-web-fe"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = {version="0.10.0", features=["events"]}
gloo-events = "0.2"
js-sys = "0.3"
llm-web-common = {path = "../llm-web-common"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.15"

[dependencies.web-sys]
version = "0.3.4"
features = [
'CssRule',
'CssRuleList',
'CssStyleDeclaration',
'CssStyleRule',
'CssStyleSheet',
'Document',
'Element',
'EventTarget',
'HtmlButtonElement',
'HtmlElement',
'HtmlImageElement',
'HtmlInputElement',
'HtmlLinkElement',
'HtmlOptionElement',
'HtmlOptionsCollection',
'HtmlSelectElement',
'HtmlStyleElement',
'KeyboardEvent',
'MouseEvent',
'Node',
'NodeIterator',
'ProgressEvent',
'StyleSheet',
'StyleSheetList',
'Text', 
'Window',
'XmlHttpRequest',
]

